--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
 streamlit-option-menu
-pandas
-numpy
-plotly
-openpyxl
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.4.2
 factor-analyzer==0.5.1
-scikit-learn==1.3.2
-scipy
+openpyxl
+plotly
+streamlit
+
