--- a/.github/workflows/wake_app.yml
+++ b/.github/workflows/wake_app.yml
@@ -2,7 +2,7 @@ name: Wake Streamlit App
 
 on:
   schedule:
-    - cron: "*/15 * * * *"   # runs every 15 minutes
+    - cron: "*/5 * * * *"  
   workflow_dispatch:
 
 jobs:
